--- a/app/templates/chart.html
+++ b/app/templates/chart.html
@@ -9,88 +9,63 @@
     <link rel="icon" href="../../favicon.ico">
 
     <title>SEO Thing</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="../static/components/d3/d3.min.js"></script>
+    <script src="../static/components/nvd3/build/nv.d3.min.js"></script>
+    <script src="../static/components/nvd3/build/nv.d3.js"></script>
 
     <!-- Bootstrap core CSS -->
-    <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
+    <link rel=stylesheet type=text/css href="{{ url_for('static', filename='components/boostrap/dist/css/bootstrap.min.css') }}">
 
     <!-- Custom styles for this template -->
     <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/dashboard.css') }}">
+    <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/nv.d3.css') }}">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
+    <!--[if lt IE 9]>
+    <script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <script src="../static/js/main.js"></script>
+    <script src="../static/js/hist.js"></script>
+    <script src="../static/js/multibar.js"></script>
 </head>
 <body>
+<div class="col-sm-8 placeholder">
+    <!--<a href="{{ url_for('google') }}"><img src="../static/google.png" class="img-responsive" alt="Google"></a>-->
+    <style>
 
-<nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">SEO Thing</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">Dashboard</a></li>
-                <li><a href="#">Settings</a></li>
-                <li><a href="#">Profile</a></li>
-                <li><a href="#">Help</a></li>
-            </ul>
-            <form class="navbar-form navbar-right">
-                <input type="text" class="form-control" placeholder="Search...">
-            </form>
-        </div>
+
+    </style>
+
+    <div id="linechart">
+        <svg></svg>
     </div>
-</nav>
 
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-sm-3 col-md-2 sidebar">
-            <ul class="nav nav-sidebar">
-                <li class="active"><a href="{{ url_for('index') }}">Home <span class="sr-only">(current)</span></a></li>
-                <li><a href={{ url_for('google') }}>Google</a></li>
-                <li><a href={{ url_for('yahoo') }}>Yahoo</a></li>
-                <li><a href={{ url_for('bing') }}>Bing</a></li>
-            </ul>
-        </div>
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+    <br>
+    <br>
+    <br>
+    <br>
 
-            <h2 class="sub-header">Bing Results</h2> <h4>Updated: {{ last_update }}</h4>
-            <div class="table-responsive">
-                <table class="table table-striped">
-                    <tr>
-                        <th>Search Term</th></th><th>dell.com</th><th>enstratius.com</th>
-                    </tr>
-                    {% for cell in bing_results %}
-                    <tr>
-                        <td>{{ bing_results[loop.index0].search_term}}</td>
-                        <td>{{ bing_results[loop.index0].results['dell.com'] }}</td>
-                        <td>{{ bing_results[loop.index0].results['enstratius.com'] }}</td>
-                    </tr>
-                    {% endfor %}
-                </table>
-            </div>
-        </div>
+    <div id="discretebar">
+        <svg></svg>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <style>#multibar svg {
+        height: 400px;
+    }</style>
+    <div id="multibar">
+        <svg></svg>
     </div>
 </div>
 
-<!-- Bootstrap core JavaScript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-<script src="https://ajax.bingapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-<script src="../../dist/js/bootstrap.min.js"></script>
-<script src="../../assets/js/docs.min.js"></script>
-<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-<script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+<!--{% block content %} {{chart|safe}} {% endblock %}-->
 </body>
 </html>
