--- a/app/templates/google.html
+++ b/app/templates/google.html
@@ -9,6 +9,7 @@
     <link rel="icon" href="../../favicon.ico">
 
     <title>SEO Thing</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
     <!-- Bootstrap core CSS -->
     <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
@@ -17,21 +18,25 @@
     <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/dashboard.css') }}">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
+    <!--[if lt IE 9]>
+    <script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <!--<script src="../../assets/js/ie-emulation-modes-warning.js"></script>-->
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/nv.d3.css') }}">
+    <script src="../static/js/multibar.js"></script>
 </head>
 <body>
 
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -66,10 +71,22 @@
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
 
             <h2 class="sub-header">Google Results </h2> <h4>Updated: {{ last_update }}</h4>
+
+            <style>#multibar svg {
+                height: 800px;
+            }</style>
+
+            <div id="multibar">
+                <svg></svg>
+            </div>
+
             <div class="table-responsive">
                 <table class="table table-striped">
                     <tr>
-                        <th>Search Term</th></th><th>dell.com</th><th>enstratius.com</th>
+                        <th>Search Term</th>
+                        </th>
+                        <th>dell.com</th>
+                        <th>enstratius.com</th>
                     </tr>
                     {% for cell in google_results %}
                     <tr>
@@ -87,10 +104,8 @@
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-<script src="../../dist/js/bootstrap.min.js"></script>
-<script src="../../assets/js/docs.min.js"></script>
-<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-<script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+<script src="../static/components/d3/d3.min.js"></script>
+<script src="../static/components/nvd3/build/nv.d3.min.js"></script>
+<script src="../static/components/nvd3/build/nv.d3.js"></script>
 </body>
 </html>
