--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,6 +9,7 @@
     <link rel="icon" href="../../favicon.ico">
 
     <title>SEO Thing</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
     <!-- Bootstrap core CSS -->
     <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
@@ -17,82 +18,101 @@
     <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/dashboard.css') }}">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
+    <!--[if lt IE 9]>
+    <script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <!--<script src="../../assets/js/ie-emulation-modes-warning.js"></script>-->
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
-  <body>
+    <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/nv.d3.css') }}">
+    <script src="../static/js/multibar.js"></script>
+</head>
+<body>
 
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container-fluid">
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container-fluid">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">SEO Thing</a>
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">SEO Thing</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Dashboard</a></li>
-            <li><a href="#">Settings</a></li>
-            <li><a href="#">Profile</a></li>
-            <li><a href="#">Help</a></li>
-          </ul>
-          <form class="navbar-form navbar-right">
-            <input type="text" class="form-control" placeholder="Search...">
-          </form>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#">Dashboard</a></li>
+                <li><a href="#">Settings</a></li>
+                <li><a href="#">Profile</a></li>
+                <li><a href="#">Help</a></li>
+            </ul>
+            <form class="navbar-form navbar-right">
+                <input type="text" class="form-control" placeholder="Search...">
+            </form>
         </div>
-      </div>
-    </nav>
+    </div>
+</nav>
 
-    <div class="container-fluid">
-      <div class="row">
+<div class="container-fluid">
+    <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
-          <ul class="nav nav-sidebar">
-            <li class="active"><a href="{{ url_for('index') }}">Home <span class="sr-only">(current)</span></a></li>
-            <li><a href={{ url_for('google') }}>Google</a></li>
-            <li><a href={{ url_for('yahoo') }}>Yahoo</a></li>
-            <li><a href={{ url_for('bing') }}>Bing</a></li>
-          </ul>
+            <ul class="nav nav-sidebar">
+                <li class="active"><a href="{{ url_for('index') }}">Home <span class="sr-only">(current)</span></a></li>
+                <li><a href={{ url_for('google') }}>Google</a></li>
+                <li><a href={{ url_for('yahoo') }}>Yahoo</a></li>
+                <li><a href={{ url_for('bing') }}>Bing</a></li>
+            </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-          <h2 class="page-header">Individual Search Engine Results</h2>
+            <h2 class="page-header">Individual Search Engine Results</h2>
 
-          <div class="row placeholders">
-            <div class="col-xs-6 col-sm-4 placeholder">
-              <a href="{{ url_for('google') }}"><img src="../static/google.png" class="img-responsive" alt="Google"></a>
-              <h4>Google</h4>
-              <span class="text-muted">Google Results</span>
+            <div class="row placeholders">
+                <div class="col-xs-6 col-sm-4 placeholder">
+                <a href="{{ url_for('google') }}"><img src="../static/google.png" class="img-responsive" alt="Google"></a>
+                <h4>Google</h4>
+                <span class="text-muted">Google Results</span>
+                </div>
+                <div class="col-xs-6 col-sm-4 placeholder">
+                <a href="{{ url_for('yahoo') }}"><img src="../static/yahoo.png" class="img-responsive" alt="Yahoo" style="width:80px;height:80px"></a>
+                <h4>Yahoo</h4>
+                <span class="text-muted">Yahoo Results</span>
+                </div>
+                <div class="col-xs-6 col-sm-4 placeholder">
+                <a href="{{ url_for('bing') }}"><img src="../static/bing.png" class="img-responsive" alt="Bing" style="width:80px;height:80px"></a>
+                <h4>Bing</h4>
+                <span class="text-muted">Bing Results</span>
+                </div>
             </div>
-            <div class="col-xs-6 col-sm-4 placeholder">
-              <a href="{{ url_for('yahoo') }}"><img src="../static/yahoo.png" class="img-responsive" alt="Yahoo" style="width:80px;height:80px"></a>
-              <h4>Yahoo</h4>
-              <span class="text-muted">Yahoo Results</span>
-            </div>
-            <div class="col-xs-6 col-sm-4 placeholder">
-              <a href="{{ url_for('bing') }}"><img src="../static/bing.png" class="img-responsive" alt="Bing" style="width:80px;height:80px"></a>
-              <h4>Bing</h4>
-              <span class="text-muted">Bing Results</span>
-            </div>
-          </div>
 
-          <h2 class="sub-header">All Results </h2> <h4>Updated: {{ last_update }} </h4>
-          <div class="table-responsive">
-            <table class="table table-striped">
-                    <th>Search Term</th><th colspan="2">Google</th><th colspan="2">Yahoo</th><th colspan="2">Bing</th>
+            <h2 class="sub-header">All Results </h2> <h4>Updated: {{ last_update }} </h4>
+
+            <style>#multibar svg {
+                height: 800px;
+            }</style>
+
+            <div id="multibar">
+                <svg></svg>
+            </div>
+
+            <div class="table-responsive">
+                <table class="table table-striped">
+                    <th>Search Term</th>
+                    <th colspan="2">Google</th>
+                    <th colspan="2">Yahoo</th>
+                    <th colspan="2">Bing</th>
                     <tr>
                         <th></th>
-                        <th>dell.com</th><th>enstratius.com</th>
-                        <th>dell.com</th><th>enstratius.com</th>
-                        <th>dell.com</th><th>enstratius.com</th>
+                        <th>dell.com</th>
+                        <th>enstratius.com</th>
+                        <th>dell.com</th>
+                        <th>enstratius.com</th>
+                        <th>dell.com</th>
+                        <th>enstratius.com</th>
                     </tr>
                     {% for cell in google_results %}
                     <tr>
@@ -106,18 +126,16 @@
                     </tr>
                     {% endfor %}
                 </table>
-          </div>
+            </div>
         </div>
-      </div>
     </div>
+</div>
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
-    <script src="../../assets/js/docs.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
-  </body>
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="../static/components/d3/d3.min.js"></script>
+<script src="../static/components/nvd3/build/nv.d3.min.js"></script>
+<script src="../static/components/nvd3/build/nv.d3.js"></script>
+</body>
 </html>
