--- a/app/templates/google.html
+++ b/app/templates/google.html
@@ -28,7 +28,7 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/nv.d3.css') }}">
-    <script src="../static/js/multibar.js"></script>
+    <script src="../static/js/google.js"></script>
 </head>
 <body>
 
